# usbd-fs-stm32

./: CMakeLists.txt  LICENSE  README.md
docs/: 00_index.md  10_firmware-development.md
include/: usb-std-audio.h  usb-std-hid.h  usb-std-midi.h  usb-std.h  usbd.h
src/: usbd.c
